# remind-me-to

./: .gitignore  .goreleaser.yml  CLAUDE.md  Cargo.toml  README.md  action.yml  devenv.nix  flake.nix  test_comments.md
.github/workflows/: ci.yml  release.yml  test-action.yml
crates/cli/: Cargo.toml
crates/cli/src/: help_examples.txt  main.rs
crates/cli/tests/: cli.rs
crates/cli/tests/snapshots/: cli__check_help_output.snap  cli__dry_run_multiple_ops_one_line.snap  cli__dry_run_multiple_reminders_one_file.snap  cli__dry_run_no_reminders.snap  cli__dry_run_parse_error.snap  cli__dry_run_python_comment.snap  cli__dry_run_rust_comment.snap  cli__dry_run_single_file_path.snap  cli__help_output.snap  cli__version_output.snap
crates/lib/: Cargo.toml
crates/lib/src/: errors.rs
crates/lib/src/ops/: checker.rs  github.rs  mod.rs  nixpkgs.rs  types.rs  version.rs
crates/lib/src/output/: llm.rs  mod.rs  text.rs
crates/lib/src/scanner/: git_context.rs  mod.rs  parser.rs  walker.rs
crates/lib/src/scanner/snapshots/: remind_lib__scanner__parser__tests__mixed_errors.snap  remind_lib__scanner__parser__tests__mixed_reminders.snap  remind_lib__scanner__parser__tests__snapshot_parse_error.snap  remind_lib__scanner__parser__tests__snapshot_single_reminder.snap  remind_me_to_lib__scanner__parser__tests__mixed_errors.snap  remind_me_to_lib__scanner__parser__tests__mixed_reminders.snap  remind_me_to_lib__scanner__parser__tests__snapshot_parse_error.snap
crates/remind-me-to-cli/: Cargo.toml
crates/remind-me-to-cli/src/: main.rs
crates/remind-me-to-cli/tests/snapshots/: cli__description_only_not_emitted.snap  cli__dry_run_html_comment.snap  cli__dry_run_json_format.snap  cli__dry_run_lua_comment.snap  cli__dry_run_mixed_valid_and_error.snap  cli__dry_run_single_reminder.snap  cli__help_output.snap  cli__ignores_markers_in_string_literals.snap  cli__quiet_produces_no_output.snap
crates/remind-me-to-lib/: Cargo.toml
crates/remind-me-to-lib/src/: errors.rs  lib.rs
crates/remind-me-to-lib/src/ops/: checker.rs  github.rs  mod.rs  types.rs  version.rs
crates/remind-me-to-lib/src/output/: json.rs  llm.rs  text.rs
crates/remind-me-to-lib/src/scanner/: git_context.rs  mod.rs  parser.rs  walker.rs
crates/remind-me-to-lib/src/scanner/snapshots/: remind_me_to_lib__scanner__parser__tests__mixed_errors.snap  remind_me_to_lib__scanner__parser__tests__snapshot_parse_error.snap  remind_me_to_lib__scanner__parser__tests__snapshot_single_reminder.snap
docs/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
docs/research/: 01-file-walking-findings.md  01-file-walking.md  02-http-client-findings.md  02-http-client.md  03-version-comparison-findings.md  03-version-comparison.md  04-error-handling-findings.md  04-error-handling.md  05-cli-testing-findings.md  05-cli-testing.md  06-http-mocking-findings.md  06-http-mocking.md  07-tracing-formatter-findings.md  07-tracing-formatter.md
