[workspace]
members = ["crates/lib", "crates/cli"]
resolver = "3"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
log = "0.4"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
