[package]
name = "cli"
version.workspace = true
edition = "2024"

[[bin]]
name = "remind-me-to"
path = "src/main.rs"

[dependencies]
remind_lib = { path = "../lib" }
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
env_logger = { version = "0.11", default-features = false }
serde_json = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["filters"] }
insta-cmd = "0.6"
predicates = "3"
tempfile = "3"
regex = "1"

[lints]
workspace = true
