[package]
name = "remind_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = { version = "1.0.0-alpha.8", default-features = false, features = ["std"] }
ignore = "0.4"
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
versions = "6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
colored = "3"
humantime = "2.3.0"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"
httpmock = "0.8"
