[package]
name = "remind_lib"
version.workspace = true
edition = "2024"

[dependencies]
chumsky = { version = "1.0.0-alpha.8", default-features = false, features = ["std"] }
ignore = "0.4"
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
versions = "6"
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { version = "0.2", default-features = false, features = ["std"] }
log = { workspace = true }
colored = { workspace = true }
humantime = "2.3.0"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"

[lints]
workspace = true
