[package]
name = "remind-me-to-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "1.0.0-alpha.8"
ignore = "0.4"
ureq = { version = "3", features = ["json"] }
http = "1"
versions = "6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"
httpmock = "0.8"
